# pad-plus-ai

./: .clinerules  .env.example  .gitignore  APPLY_RLS_FIX.md  AUDIT_PROVIDERS_MODELS.md  AUDIT_REPORT_2026_05_08.md  BAT_LAUNCH_FIX.md  CHANGES.md  CHAT_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_FINAL.md  DEPLOYMENT_COMPLETION_REPORT.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_SUPABASE_VECTOR.md  Dockerfile  FINAL_DEPLOYMENT_CHECKLIST.md  FINAL_TESTING_CHECKLIST.md  FINAL_TESTING_REPORT.md  FINAL_WORK_REPORT.md  FIX_RLS_README.md  FRONTEND_SECURITY_REPORT.md  KODA.md  LICENSE  LOCAL_GIGACHAT_SETUP.md  LOCAL_SETUP_POSTGRES.md  Makefile  OPENROUTER_EXPLANATION.md  PLAN.md  PLAN_LITELLM_GLOBAL_FIX.md  PRE_DEPLOYMENT_CHECKLIST.md  PROJECT_ARCHITECTURE_COMPLETE.md  PROVIDER_CONFIGURATION_GUIDE.md  QUICK_DEPLOY_GUIDE.md  QUICK_FIX.md  QUICK_RENDER_SETUP.md  README — копия.md  README.md  README_AUDIT_REPORT.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_GUIDE.md  (+65 more)
.ai/: AI_INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CURRENT_TASK.md  RULES.md  STATUS.md
.git-rewrite/: backup-refs  commit  heads  index  parse  revs  tree-state
.qwen/: settings.json
HEALER/: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  dev-requirements.txt  main.py  mypy.ini  pyproject.toml
HEALER/.github/workflows/: ci.yml
HEALER/aethon/: __init__.py
HEALER/aethon/xray/: __init__.py  causal_validator.py  consistency_audit.py  contracts.py  data_sanitizer.py  diagnostics.py  event.py  http_propagation.py  manual_scenarios.py  metrics.py  retention.py  span.py  trace.py  trace_store.py  version.py
HEALER/aethon/xray/control_plane/: __init__.py  dto.py  normalizer.py
HEALER/docs/: ADDING_DETECTOR.md  ADDING_PATTERN.md  FOR_HUMANS.md  HEALER_PROJECT.md  HEALER_ROADMAP.md  HEALER_STRATEGY.md  USE_CASES.md
HEALER/healer/: __init__.py  api.py  orchestrator.py
HEALER/healer/diagnostics/: __init__.py  base.py  causal_violation.py  dead_code.py  error_path.py  high_memory.py  integration_test.py  js_source.py  latency_anomaly.py  report.py  resource_leak.py  runner.py  slow_import.py  span_analyzer.py
HEALER/healer/meta/: __init__.py  meta_learner.py  strategies.py
HEALER/healer/patcher/: __init__.py  base.py  cache_cleaner.py  js_patcher.py  python_patcher.py  result.py
HEALER/healer/patcher/patterns/: __init__.py  add_timeout_py.py  base_pattern.py  close_resource_py.py  lazy_import_py.py  remove_dead_py.py  try_finally_py.py
HEALER/healer/verifier/: __init__.py  lint_checker.py  metric_compare.py  result.py  rollback.py  test_runner.py
HEALER/healer/viewer/: __init__.py  __main__.py  viewer.py
HEALER/healer/viewer/docs/: API.md  ARCHITECTURE.md  DEVELOPER.md  HEALER_INTEGRATION.md
HEALER/healer/viewer/static/: index.html  messages.json
HEALER/scripts/: _gh_test.py  deploy.bat  smoke.bat  smoke_test.py
HEALER/tests/: test_diagnostics.py  test_meta.py  test_orchestrator.py  test_patcher.py  test_verifier.py
backend/: __init__.py  check_encrypted_key.py  check_full_key.py  check_latest_key.py  main.py  main_simple.py  main_stable.py  security_middleware.py  test_decrypt.py  test_endpoints.py
docs/: ANALYTICS.md  (+59 more)
(+612 files in other folders)
