[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (black handles this)
    "E741",  # ambiguous variable name
    "N802",  # function name should be lowercase
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N815",  # mixedCase variable in class scope
    "N816",  # mixedCase variable in global scope
    "N817",  # acronym in class name
    "UP007",  # use X | Y for unions (not compatible with older py)
    "B008",  # Do not perform function calls in dataclass defaults
    "SIM115",  # Use context handler for opening files
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806", "N815", "N816", "N817", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


